<resources>
    <string name="app_name">Bepp</string>


    <!-- Slides-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">SEGUIR</string>
    <string name="title_activity_slide__first">Slide_First</string>
    <string name="err_msg_nombre">Ingrese el campo nombre.</string>
    <string name="err_msg_apellido_paterno">Ingrese el campo apellido paterno.</string>
    <string name="err_msg_apellidoM">Ingrese el campo apellido materno.</string>
    <string name="err_msg_email">Correo inválido.</string>
    <string name="err_msg_required">Requerido.</string>
    <string name="err_msg_password">Ingrese una contraseña.</string>
    <string name="err_msg_movil">Ingrese un telefono.</string>
    <string name="err_line">Ingresar correo.</string>

    <string name="err_msg_diferen_password">La contraseña debe ser igual al anterior.</string>
    <string name="err_msg_minLengtexto">El campo debe tener mínimo 3 caracteres.</string>
    <string name="err_msg_minLengNum">El campo debe tener mínimo 10 caracteres.</string>
    <string name="err_msg_minLengPass">El campo debe tener mínimo 4 caracteres.</string>
    <string name="error_msg_ya_registado">Error al registrarte</string>
    <string name="error_msg_bandeja">Error al enviar</string>
    <string name="msg_dialog_registado">Registro exitoso</string>
    <string name="msg_dialog_titulo_bandeja">¡Listo!</string>
    <string name="msg_dialog_bandeja">Revisa tu bandeja de entrada.</string>
    <string name="msg_dialog_login_invalido">Inicio de sesión no válida</string>

    <style name="error_appearance" parent="@android:style/TextAppearance">
        <item name="android:textColor">@color/error_inpt</item>
        <item name="android:textSize">12sp</item>
    </style>

    <string name="title_activity_home_menu">HomeActivityMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="mis_recetas">Mis Recetas</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="historial">Historial Clínico</string>
    <string name="pago">Historial de Compra</string>
    <string name="familia">Amigos y Familiares</string>
    <string name="doctores">Mis Médicos</string>
    <string name="tienda">Tienda</string>
    <string name="directorio">Directorio Médico</string>
    <string name="laboratorios">Laboratorios Y Servicios</string>
    <string name="configuracion">Configuraciones</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="especialidades">
        <item>Selecciona la Especialidad Médica</item>
        <item>Pediatria</item>
        <item>Cirujaro</item>
        <item>Urologo</item>
        <item>Gastroenterologo</item>
        <item>Endocrinologo</item>
    </string-array>
    <string name="title_activity_directorio_medico">DirectorioMedicoActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_busqueda_maps">Map</string>
    <string name="title_activity_farmacia_receta">FarmaciaRecetaActivity</string>
    <string name="title_activity_historial_compra_main">HistorialCompraMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="launch_map_picker" translatable="false">LAUNCH MAP LOCATION PICKER ACTIVITY</string>
    <string name="launch_map_picker_with_pois" translatable="false">LAUNCH MAP WITH POIS</string>


    <string name="open_activity">Open Autocomplete Activity</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="intro_message">
        <![CDATA[


            This sample uses the PlaceAutocomplete Activity from the Places API for Android to open
            a fullscreen autocomplete widget when the button is pressed.


        ]]>
    </string>
    <string name="title_activity_main3">Main3Activity</string>


    <string name="card_created">Tarjeta registrada correctamente</string>
    <string name="button_save">Guardar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="holder_name">Titular</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="cvv">CVV2</string>
    <string name="info">Información</string>
    <string name="error">Error</string>
    <string name="card_added">Tarjeta Registrada</string>
    <string name="invalid_card_number">Número inválido</string>
    <string name="invalid_holder_name">Titular es requerido</string>
    <string name="invalid_cvv">Código de seguridad inválido</string>
    <string name="invalid_expire_date">Fecha de expiracion inválida</string>
    <string name="progress_message">Procesando...</string>
    <string name="declined">La tarjeta fue rechazada</string>
    <string name="expired">La tarjeta ha expirado</string>
    <string name="insufficient_funds">La tarjeta no tiene fondos suficientes</string>
    <string name="stolen_card">La tarjeta ha sido identificada como una tarjeta robada</string>
    <string name="suspected_fraud">La tarjeta ha sido identificada como una tarjeta fraudulenta.</string>
    <string name="communication_error">No se puede establecer comunicacion con el servidor</string>
    <string name="already_exists">La tarjeta ya se encuentra registrada</string>
    <string name="error_creating_card">Ocurrio un error al regitrar la tarjeta</string>


    <string-array name="year_array">
        <item>Año</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>


    <string-array name="month_array">
        <item>Mes</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="add_card">Agregar</string>
    <string name="checkout">Generar</string>
    <string name="sessionId">DeviceId: </string>
    <string name="getSessionId">Generar DeviceId</string>
    <string name="card">Tarjeta</string>
    <string name="token">Token</string>


</resources>
