<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bepp.com.bepp.menus.HomeActivityMenu"

    tools:showIn="@layout/app_bar_home_activity_menu">



    <LinearLayout
        android:id="@+id/layout_nombre_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="33dp">


        <TextView
            android:id="@+id/text_nombre_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/bepp"
            android:lineSpacingExtra="-1sp"
            android:gravity="center_horizontal"
            android:text=""
            />





    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_nombre_titulo"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_search_bg_corners"

        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"

        android:layout_marginLeft="16dp">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:searchIcon="@mipmap/icono_busqueda"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Busca tus medicamentos" />


    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/layout_searchView"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/linearLayoutSaludo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:id="@+id/relativeLayout3">

            <LinearLayout
                android:id="@+id/tercerLayoutImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_below="@+id/textLayoutText"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonHistorialCompra"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    app:srcCompat="@drawable/icono_pagos" />

                <ImageButton
                    android:id="@+id/image_directorio"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_directorio" />

                <ImageButton
                    android:id="@+id/imageButtonConfiguraciones"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_configuraciones"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    android:layout_centerHorizontal="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/secgLayoutImg"
                android:orientation="horizontal"
                android:id="@+id/textLayoutText">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/familia"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/doctores"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tienda"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/primerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_below="@+id/primerLayoutImg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mis_recetas"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tratamientos"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/historial"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secgLayoutImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_below="@+id/primerText"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonFamiliares"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_familiares"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    android:layout_centerHorizontal="true"
                    />

                <ImageButton
                    android:id="@+id/imageButtonDoctores"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_doctores"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    android:layout_centerHorizontal="true"
                    />

                <ImageButton
                    android:id="@+id/imageButtonTienda"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    android:scaleType="fitCenter"
                    android:padding="6dp"
                    app:srcCompat="@drawable/icono_tienda" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:id="@+id/primerLayoutImg">

                <ImageButton
                    android:id="@+id/imageButtonRecetas"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="6dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_recetas"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerHorizontal="true"
                    />

                <ImageButton
                    android:id="@+id/imageButtonTratamiento"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:padding="6dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_tratamiento" />

                <ImageButton
                    android:id="@+id/image_button_historialclinico"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:background="@drawable/button_bg_home_rounded_only_corners"
                    app:srcCompat="@drawable/icono_historial"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/tercerLayoutImg">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pago"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/directorio"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/configuracion"
                    android:textAlignment="center" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>





</RelativeLayout>
